--- a/package.json
+++ b/package.json
@@ -10,11 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.4.0",
+    "@heroicons/react": "^2.2.0",
+    "@keymetrics/pmx": "^2.0.0-alpha14",
+    "@reduxjs/toolkit": "^2.5.1",
+    "autoprefixer": "^10.4.20",
+    "datatables": "^1.10.18",
     "faker": "^6.6.6",
+    "lodash": "^4.17.21",
+    "postcss": "^8.5.1",
     "react": "^18.3.1",
+    "react-datepicker": "^8.0.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
-    "recharts": "^2.15.1"
+    "react-router-dom": "^7.1.5",
+    "recharts": "^2.15.1",
+    "tailwindcss": "^4.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
