--- a/package.json
+++ b/package.json
@@ -1,43 +1,28 @@
 {
   "name": "streamify",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@faker-js/faker": "^9.4.0",
-    "@heroicons/react": "^2.2.0",
-    "@keymetrics/pmx": "^2.0.0-alpha14",
-    "@reduxjs/toolkit": "^2.5.1",
-    "autoprefixer": "^10.4.20",
-    "datatables": "^1.10.18",
-    "faker": "^6.6.6",
-    "lodash": "^4.17.21",
-    "postcss": "^8.5.1",
-    "react": "^18.3.1",
-    "react-datepicker": "^8.0.0",
-    "react-dom": "^18.3.1",
-    "react-icons": "^5.4.0",
-    "react-router-dom": "^7.1.5",
-    "recharts": "^2.15.1",
-    "tailwindcss": "^4.0.2"
+    "framer-motion": "^12.0.6",
+    "next": "14.0.4",
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "@eslint/js": "^9.17.0",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.17.0",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.16",
-    "globals": "^15.14.0",
-    "typescript": "~5.6.2",
-    "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5"
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.4",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
