--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-virtual": "^2.10.4",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
