--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "^9.4.0",
+    "@testing-library/react": "^16.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.0.6",
@@ -18,10 +19,12 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-error-boundary": "^5.0.0",
     "react-virtual": "^2.10.4",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "vitest": "^3.0.4",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
