--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
   },
   "dependencies": {
     "@faker-js/faker": "^9.4.0",
+    "@tanstack/react-query": "^5.66.0",
     "@testing-library/dom": "^10.4.0",
     "@vitejs/plugin-react": "^4.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.0.6",
+    "i18next": "^24.2.2",
     "lucide-react": "^0.474.0",
     "motion": "^12.0.6",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
     "react-error-boundary": "^5.0.0",
+    "react-i18next": "^15.4.0",
     "react-virtual": "^2.10.4",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
