--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@faker-js/faker": "^9.4.0",
     "@tanstack/react-query": "^5.66.0",
     "@testing-library/dom": "^10.4.0",
+    "@types/file-saver": "^2.0.7",
+    "@types/ws": "^8.5.14",
     "@vitejs/plugin-react": "^4.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -29,6 +31,7 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "ws": "^8.18.0",
     "xlsx": "^0.18.5",
     "zustand": "^5.0.3"
   },
