--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18",
     "react-error-boundary": "^5.0.0",
     "react-i18next": "^15.4.0",
+    "react-icons": "^5.4.0",
     "react-virtual": "^2.10.4",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
