--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@faker-js/faker": "^9.4.0",
     "@tanstack/react-query": "^5.66.0",
+    "@tanstack/react-virtual": "^3.11.3",
     "@testing-library/dom": "^10.4.0",
     "@types/file-saver": "^2.0.7",
     "@types/ws": "^8.5.14",
